--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="41" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="41" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -153,7 +153,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 33%;">
-                  <div class="mbr-figure"><img src="assets/images/rad-1000-468x7861.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/rad-1000-468x7862.png"></div>
               </div>
 
             </div>
@@ -528,7 +528,7 @@
                 <div><a href="index.html#header4-w"><img src="assets/images/neurad-2-128x93.png"></a></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><br><strong>ООО "ТермоВат" </strong><br><strong>Беларусь, 220116, Минск, 
+                <p><strong>ООО "ТермоВат" </strong><br><strong>Беларусь, 220116, Минск, 
 <br>Бетонный проезд, 19 А, оф. 306&nbsp;<br>Email:&nbsp;neurad.info@gmail.com&nbsp;<br>Phone: +375 (29) 6317655
 </strong><br><br><br></p>
             </div>
