--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -116,7 +116,7 @@
               
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-right content-size">
-                  <h3 class="mbr-section-title display-2">РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР РАДИОАКТИВНЫХ МАТЕРИАЛОВ И МЕТАЛЛИЧЕСКИХ ОБЪЕКТОВ – «RAD-1000» (готовое решение)<br><br><span style="font-weight: normal;">объединяет в себе функции поискового сигнализатора-индикатора гамма излучения и металлодетектора, что позволяет одновременно проводить досмотр на наличие металлических предметов и радиоактивных материалов, что даже позволяет выявлять экранированные источники.</span><br><span style="font-weight: normal;">Комбинированный детектор, установленный в сканер, такого класса чувствительности и временных характеристик обнаружения аналогов в Мире не имеют!</span><br></h3>
+                  <h3 class="mbr-section-title display-2">РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР РАДИОАКТИВНЫХ МАТЕРИАЛОВ И МЕТАЛЛИЧЕСКИХ ОБЪЕКТОВ – «RAD-1000» (готовое решение)<br><br><span style="font-weight: normal;">объединяет в себе функции поискового сигнализатора-индикатора гамма излучения и металлодетектора, что позволяет одновременно проводить досмотр на наличие металлических предметов и радиоактивных материалов, что даже позволяет выявлять экранированные источники.</span><br><span style="font-weight: normal;">Комбинированный детектор, установленный в сканер, такого класса чувствительности и временных характеристик обнаружения аналогов в Мире не имеет!</span><br></h3>
                   <div class="lead">
 
                     <p><strong>ОСОБЕННОСТИ:
