--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -200,8 +200,7 @@
 <br>
 - Объединение и контроль через локальную сеть посредством специализированного ПО<br>- ЖК-монитор (доп. опция)<br>
 <br><br><strong>ТЕХНИЧЕСКИЕ ХАРАКТЕРИСТИКИ:
-</strong><br>подробнее в техническом описании.<strong><br></strong><br><strong>Характеристики конструкции прибора:&nbsp;</strong><br>Габариты: 432х55х31 мм
-<br>Диапазон рабочих температур: -20...+50 С°
+</strong><br>подробнее в техническом описании.<strong><br></strong><br><strong>Характеристики конструкции прибора:&nbsp;</strong><br>Диапазон рабочих температур: -20...+50 С°
 <br>
 <br><strong>КОМПЛЕКТ ПОСТАВКИ:
 </strong><br>Прибор (комлекс)<br>Инструкция<br><br><br><strong>МОДИФИКАЦИИ КОМПЛЕКСА:</strong><br><strong>1.&nbsp;RAD-3MR&nbsp;01 (RT-40.0)&nbsp;</strong><br>    тип информера:  звуковой и световой сигналы <br>параметры: питание, св.сигнал на металл, св.сигнал на радиоктивное излучение<br><strong>2.&nbsp;RAD-3MR</strong>&nbsp;<strong>02 (RT-40.1)&nbsp;</strong><br>    тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)
