create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="41" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/i">how to build your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="41" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
