--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -69,7 +69,7 @@
                 <div class="mbr-section col-md-10">
 
                     <h1 class="mbr-section-title display-1">Инновационные средства
- радиационного контроля и металло-контроля:</h1>
+ радиационного контроля и металло-контроля:<br><br></h1>
                     <p class="mbr-section-lead lead"><strong>1. Комбинированные (2 в 1) детекторы ионизирующего излучения на основе современных оптических и полупроводниковых устройств для ядерных измерений и радиационного контроля. <br>                                                                                                                                                                                                                                                              2. Готовые приборы на базе сомещенных детекторов ионизирующего излучения. <br>                                                                                                                                                                           3. Специализарованное программное обеспечение для приборов на базе детекторов ионизирующего излучения.</strong><br><br><br><strong>&nbsp; &nbsp; &nbsp;Инновационная отечественная разработка, реализованная в производстве:</strong><br><strong>✅</strong>&nbsp;<strong>готового решения -&nbsp;арочных комплексов и ручных сканеров металлических предметов с функцией одновременного выявления радиоактивных элементов;</strong><br><strong>✅ детекторов комбинированных от начального уроня до повышенной чувствительности серий «RT-3.x», «RT-40.x», «NaI (tl) 40x40(1)».</strong><br><strong>&nbsp; &nbsp; &nbsp;Комбинированные приборы такого класса в Мире  больше нигде не производятся!</strong><br><br><strong>&nbsp;<br>&nbsp; &nbsp; &nbsp;Ядерный терроризм ­едва ли не наибольшая угроза для Мира. За 20 лет в специальной базе ­МАГАТЭ собраны сведения о 2,7 тысячи подтвержденных инцидентах, связанных с незаконным оборотом радиоактивных материалов. В этой связи наше предприятие предлагает инновационные системы безопасности и досмот­ра посетителей государственных учреждений, многофункциональных комплексов торгового и зрелищного назначения, железнодорожных и автовокзалов, портов, объектов водоснабжения, энергетики и так далее. <br>&nbsp; &nbsp; &nbsp;Общее же применение детекторов очень широкое - медицина (мед, техника), железнодорожная и автотранспортная логистика (грузы), экология сред и зон (мониторинг), горнодобывающая отрасль и металлопереработка, контроль продуктов питания, автомобилестроение (встроенные детекторы), военная промышленность.
 <br></strong>
 <br></p>
