create github pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-0" data-rv-view="0">
+<section id="menu-0" data-rv-view="312">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="2" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="314" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="5" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="317" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,18 +94,18 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="7" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="319" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><blockquote>&nbsp; &nbsp;<strong> </strong>&nbsp;<strong> ПРЕИМУЩЕСТВА
-</strong></blockquote><blockquote><p><strong>✅ Один прибор вместо двух:</strong></p><p><strong>&nbsp; &nbsp; &nbsp;</strong>✅ Снижение стоимости обнаружения</p><p>&nbsp; &nbsp; &nbsp;✅ Снижение стоимости обнаружения</p><p>&nbsp; &nbsp; &nbsp;✅ Снижение времени процесса обнаружения</p><p><strong>✅ Один человек вместо двух</strong></p><p>&nbsp; &nbsp; &nbsp;✅ Отсутствие специальных квалификационных требований к персоналу</p><p><strong>✅ Работа в полевых условиях и в сложной метеообстановке</strong></p><p><strong>✅ Работа в условиях внешнего электромагнитного поля&nbsp;</strong></p></blockquote></div>
+</strong></blockquote><blockquote><p><strong>✅ Один прибор вместо двух:</strong></p><p><strong>&nbsp; &nbsp; &nbsp;</strong>✅ Снижение стоимости обнаружения</p><p>&nbsp; &nbsp; &nbsp;✅ Уменьшение размера оборудования</p><p>&nbsp; &nbsp; &nbsp;✅ Снижение времени процесса обнаружения</p><p><strong>✅ Один человек вместо двух</strong></p><p>&nbsp; &nbsp; &nbsp;✅ Отсутствие специальных квалификационных требований к персоналу</p><p><strong>✅ Работа в полевых условиях и в сложной метеообстановке</strong></p><p><strong>✅ Работа в условиях внешнего электромагнитного поля&nbsp;</strong></p></blockquote></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="9" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="321" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -174,7 +174,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="12" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="324" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -226,7 +226,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="15" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="327" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -262,7 +262,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="18" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="330" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -310,7 +310,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="21" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="333" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -353,7 +353,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="24" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="336" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -389,7 +389,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="27" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="339" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -476,7 +476,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="30" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="342" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -486,7 +486,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="32" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="344" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -527,7 +527,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="35" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="347" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -550,7 +550,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="37" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="349" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
