create github pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-0" data-rv-view="312">
+<section id="menu-0" data-rv-view="158">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="314" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">website builder software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="160" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="317" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="163" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="319" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="165" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="321" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="167" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -133,15 +133,15 @@
 <br>- Эргономичная конструкция<br>
 - Объединение и контроль через локальную сеть посредством специализированного ПО<br>- ЖК-монитор (доп. опция)<br>
 <br><br><strong>ТЕХНИЧЕСКИЕ ХАРАКТЕРИСТИКИ:
-</strong><br>Основные характеристики канала гамма излучения:<br>Диапазон регистрируемого &nbsp;излучения:&nbsp; от 0,015 до 3,0 МэВ,
-при t° от минус 20 до 55°C<br>Диапазонпороговых значений 0.01 … 500 мкЗв/ч<br>Время определения минимального количества ионизирующего материала: &nbsp;≤2с<br>Рабочая частота металлоискателя: 50 кГц
-<br>Вероятность обнаружения: 0,98&nbsp;<br>Чувствительность - пистолет ПМ: 160 мм<br><br>Основные технические характеристики поиска металлических объектов:&nbsp;<br>Объект обнаружения: любой.<br>Дальность обнаружения: стальная пластина - 100 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; штык нож - 130 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; пистолет Макарова - 200 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; металлический контейнер для радиоактивных материалов - 200 мм.<br>Скорость сканирования:&nbsp;от 0 до 0,5 м/с<br><br><strong>Характеристики конструкции прибора:&nbsp;</strong><br>Время непрерывной работы: около 120 часов (при использовании U9VL-J 9V);
+</strong><br><strong>&nbsp; &nbsp; &nbsp;Основные характеристики канала гамма излучения:</strong><br>&nbsp; &nbsp; &nbsp;Диапазон регистрируемого &nbsp;излучения:&nbsp; от 0,015 до 3,0 МэВ,
+при t° от минус 20 до 55°C<br>&nbsp; &nbsp; &nbsp;Диапазонпороговых значений 0.01 … 500 мкЗв/ч<br>&nbsp; &nbsp; &nbsp;Время определения минимального количества ионизирующего материала: &nbsp;≤2с<br>&nbsp; &nbsp; &nbsp;Рабочая частота металлоискателя: 50 кГц
+<br>&nbsp; &nbsp; &nbsp;Вероятность обнаружения: 0,98&nbsp;<br>&nbsp; &nbsp; &nbsp;Чувствительность - пистолет ПМ: 160 мм<br><br><strong>&nbsp; &nbsp; &nbsp;Основные технические характеристики поиска металлических объектов:&nbsp;</strong><br>&nbsp; &nbsp; &nbsp;Объект обнаружения: любой.<br>&nbsp; &nbsp; &nbsp;Дальность обнаружения: стальная пластина - 100 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;штык нож - 130 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;пистолет Макарова - 200 мм;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;металлический контейнер для радиоактивных материалов - 200 мм.<br>&nbsp; &nbsp; &nbsp;Скорость сканирования:&nbsp;от 0 до 0,5 м/с<br><br><strong>ХАРАКТЕРИСТИКИ КОНСТРУКЦИИ ПРИБОРА:&nbsp;</strong><br>Время непрерывной работы: около 120 часов (при использовании U9VL-J 9V);
 <br>Вес: 0,32 кг
 <br>Габариты: 432х55х31 мм
 <br>Диапазон рабочих температур: -20...+50 С°
 <br>
-<br><br><strong>КОМПЛЕКТ ПОСТАВКИ:
-</strong><br>Прибор<br>Инструкция<br>Аккумулятор 9 В&nbsp;<br>Зарядное устройство 220В&nbsp;<br>Крепление на ремень<strong>&nbsp;</strong><br><strong><br></strong><br><strong>МОДИФИКАЦИИ СКАНЕРА:
+<br><strong>КОМПЛЕКТ ПОСТАВКИ:
+</strong><br>Прибор<br>Инструкция<br>Аккумулятор 9 В&nbsp;<br>Зарядное устройство 220В&nbsp;<br>Крепление на ремень<strong>&nbsp;</strong><br><strong><br></strong><strong>МОДИФИКАЦИИ СКАНЕРА:
 </strong><br><strong>1.&nbsp;RAD-1000</strong>&nbsp;<strong>01 (RT-3.0) 
 </strong><br>тип информера: звуковой и световой сигналы 
 <br>параметры: питание, св.сигнал на металл, св.сигнал на радиоктивное излучение
@@ -174,7 +174,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="324" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="170" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -199,11 +199,10 @@
 <br>- Антивандальный корпус
 <br>
 - Объединение и контроль через локальную сеть посредством специализированного ПО<br>- ЖК-монитор (доп. опция)<br>
-<br><br><strong>ТЕХНИЧЕСКИЕ ХАРАКТЕРИСТИКИ:
-</strong><br>подробнее в техническом описании.<strong><br></strong><br><strong>Характеристики конструкции прибора:&nbsp;</strong><br>Диапазон рабочих температур: -20...+50 С°
-<br>
-<br><strong>КОМПЛЕКТ ПОСТАВКИ:
-</strong><br>Прибор (комлекс)<br>Инструкция<br><br><br><strong>МОДИФИКАЦИИ КОМПЛЕКСА:</strong><br><strong>1.&nbsp;RAD-3MR&nbsp;01 (RT-40.0)&nbsp;</strong><br>    тип информера:  звуковой и световой сигналы <br>параметры: питание, св.сигнал на металл, св.сигнал на радиоктивное излучение<br><strong>2.&nbsp;RAD-3MR</strong>&nbsp;<strong>02 (RT-40.1)&nbsp;</strong><br>    тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)
+<br><strong>ТЕХНИЧЕСКИЕ ХАРАКТЕРИСТИКИ:
+</strong><br>подробнее в техническом описании.<br><br><strong>ХАРАКТЕРИСТИКИ КОНСТРУКЦИИ ПРИБОРА:&nbsp;</strong><br>Диапазон рабочих температур: -20...+50 С°
+<br><br><strong>КОМПЛЕКТ ПОСТАВКИ:
+</strong><br>Прибор (комлекс)<br>Инструкция<br><br><strong>МОДИФИКАЦИИ КОМПЛЕКСА:</strong><br><strong>1.&nbsp;RAD-3MR&nbsp;01 (RT-40.0)&nbsp;</strong><br>    тип информера:  звуковой и световой сигналы <br>параметры: питание, св.сигнал на металл, св.сигнал на радиоктивное излучение<br><strong>2.&nbsp;RAD-3MR</strong>&nbsp;<strong>02 (RT-40.1)&nbsp;</strong><br>    тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)
 <br>параметры: питание, св.сигнал на металл, 3 св. сигнала на радиоктивное излучение<br><strong>3.&nbsp;RAD-3MR</strong>&nbsp;<strong>03 (RT-40.21) </strong>&nbsp;<br>    тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS
 <br>параметры: 3-х сегментный однострочный ЖКИ –индикация CPS<br><strong>4.&nbsp;RAD-3MR</strong>&nbsp;<strong>04 (RT-40.22)</strong> &nbsp;<br>    тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS+DER<br>параметры: двухстрочный ЖКИ –индикация CPS и DER<br><br><br>Подробнее в техническом описании.<strong><br></strong><br></p>
 
@@ -226,7 +225,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="327" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="173" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -240,7 +239,7 @@
                   <h3 class="mbr-section-title display-2">РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» &nbsp;(для компактного оборудования)</h3>
                   <div class="lead">
 
-                    <p>Детектор RT-3.x поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.<br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.<br><br>Модификации:<br><strong>1. RT-3.0</strong><br>&nbsp; &nbsp; тип информера: &nbsp;звуковой и световой сигналы&nbsp;<br><strong>2.&nbsp;RT-3.1</strong><br>&nbsp; &nbsp;&nbsp;тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)<br><strong>3. RT-3.21</strong>
+                    <p>Детектор RT-3.x поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.<br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.<br><br><strong>МОДИФИКАЦИИ ДЕТЕКТОРА:</strong><br><strong>1. RT-3.0</strong><br>&nbsp; &nbsp; тип информера: &nbsp;звуковой и световой сигналы&nbsp;<br><strong>2.&nbsp;RT-3.1</strong><br>&nbsp; &nbsp;&nbsp;тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)<br><strong>3. RT-3.21</strong>
 <br>&nbsp; &nbsp; тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS<br><strong>4. RT-3.22</strong>&nbsp;<br>&nbsp; &nbsp; тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS+DER<br><br><br>Подробнее в техническом описании.</p>
 
                   </div>
@@ -262,7 +261,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="330" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="176" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -279,8 +278,7 @@
                     <p>Детектор RT-40.x поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.
 <br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.
 <br>
-<br>Модификации:
-<br><strong>1. RT-40.0
+<br><strong>МОДИФИКАЦИИ ДЕТЕКТОРА</strong>:<br><strong>1. RT-40.0
 </strong><br>    тип информера:  звуковой и световой сигналы 
 <br><strong>2. RT-40.1</strong>
 <br>    тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)
@@ -310,7 +308,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="333" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="179" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -353,7 +351,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="336" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="182" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -389,7 +387,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="339" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="185" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -476,7 +474,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="342" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="188" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -486,7 +484,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="344" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="190" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -527,7 +525,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="347" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="193" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -550,7 +548,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="349" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="195" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
