--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-20" data-rv-view="351">
+<section id="menu-20" data-rv-view="197">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="353" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="199" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-22" data-rv-view="356" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-22" data-rv-view="202" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-23" data-rv-view="358" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-23" data-rv-view="204" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-24" data-rv-view="360" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-24" data-rv-view="206" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -153,7 +153,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 33%;">
-                  <div class="mbr-figure"><img src="assets/images/rad-1000-468x7861.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/rad-1000-468x7860.png"></div>
               </div>
 
             </div>
@@ -162,7 +162,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-25" data-rv-view="363" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-25" data-rv-view="209" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -219,7 +219,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-26" data-rv-view="366" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-26" data-rv-view="212" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -255,7 +255,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-27" data-rv-view="369" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-27" data-rv-view="215" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -303,7 +303,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-28" data-rv-view="372" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-28" data-rv-view="218" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -346,7 +346,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-29" data-rv-view="375" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-29" data-rv-view="221" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -382,7 +382,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-2a" data-rv-view="378" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-2a" data-rv-view="224" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -469,7 +469,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-2b" data-rv-view="381" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-2b" data-rv-view="227" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -479,7 +479,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-2c" data-rv-view="383" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-2c" data-rv-view="229" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -520,7 +520,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2d" data-rv-view="386" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2d" data-rv-view="232" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -543,7 +543,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-2e" data-rv-view="388" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-2e" data-rv-view="234" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
