--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-0" data-rv-view="158">
+<section id="menu-0" data-rv-view="314">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">web software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="160" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="316" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="163" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="319" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="165" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="321" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="167" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="323" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -174,7 +174,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="170" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="326" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -225,7 +225,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="173" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="329" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -239,7 +239,7 @@
                   <h3 class="mbr-section-title display-2">РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» &nbsp;(для компактного оборудования)</h3>
                   <div class="lead">
 
-                    <p>Детектор RT-3.x поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.<br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.<br><br><strong>МОДИФИКАЦИИ ДЕТЕКТОРА:</strong><br><strong>1. RT-3.0</strong><br>&nbsp; &nbsp; тип информера: &nbsp;звуковой и световой сигналы&nbsp;<br><strong>2.&nbsp;RT-3.1</strong><br>&nbsp; &nbsp;&nbsp;тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)<br><strong>3. RT-3.21</strong>
+                    <p>Детектор «RT-3.x» поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.<br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.<br><br><strong>МОДИФИКАЦИИ ДЕТЕКТОРА:</strong><br><strong>1. RT-3.0</strong><br>&nbsp; &nbsp; тип информера: &nbsp;звуковой и световой сигналы&nbsp;<br><strong>2.&nbsp;RT-3.1</strong><br>&nbsp; &nbsp;&nbsp;тип информера: звуковой сигнал, цвето-световой сигнал (3 уровня)<br><strong>3. RT-3.21</strong>
 <br>&nbsp; &nbsp; тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS<br><strong>4. RT-3.22</strong>&nbsp;<br>&nbsp; &nbsp; тип информера: звуковой сигнал, цифровая ЖК-индикация уровня CPS+DER<br><br><br>Подробнее в техническом описании.</p>
 
                   </div>
@@ -261,7 +261,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="176" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="332" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -275,7 +275,7 @@
                   <h3 class="mbr-section-title display-2">РАДИАЦИОННЫЕ ДЕТЕКТОРЫ ПОВЫШЕННОЙ ЧУВСТВИТЕЛЬНОСТИ СЕРИИ «RT-40.x» (для крупногабаритного оборудования)</h3>
                   <div class="lead">
 
-                    <p>Детектор RT-40.x поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.
+                    <p>Детектор «RT-40.x» поставляется в комплекте с интерфейсами USB, CAN для коммуникации с контрольно-измерительной аппаратурой.
 <br>Различны по чувствительности, электронной «начинке» и возможностям индикации и коммуникации.
 <br>
 <br><strong>МОДИФИКАЦИИ ДЕТЕКТОРА</strong>:<br><strong>1. RT-40.0
@@ -308,7 +308,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="179" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="335" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -351,7 +351,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="182" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="338" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -387,7 +387,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="185" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="341" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -474,7 +474,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="188" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="344" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -484,7 +484,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="190" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="346" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -525,7 +525,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="193" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="349" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -548,7 +548,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="195" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="351" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
